# tsnkit

./: .gitattributes  .gitignore  .mypy.ini  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  go.mod  pyproject.toml  requirements-cython.txt  requirements.txt  setup.py  test.py  usage_monitor.sh
.github/workflows/: workflow.yml
.raw_models/: README.txt
.raw_models/ACCESS2020/: ACCESS2020.py
.raw_models/ASPDAC2022/: ASPDAC2022.py  ASPDAC2022_tt.py
.raw_models/CIE2021/: CIE2021.py
.raw_models/COR2022/: COR2022.py
.raw_models/GLOBECOM2022/: GLOBECOM2022.py
.raw_models/IEEEJAS2021/: IEEEJAS2021.py
.raw_models/IEEETII2020/: IEEETII2020.py
.raw_models/RTAS2018/: RTAS2018.py
.raw_models/RTAS2020/: RTAS2020.py
.raw_models/RTCSA2018/: RTCSA2018.py
.raw_models/RTCSA2020/: RTCSA2020.py
.raw_models/RTNS2016/: RTNS2016 copy.py
.raw_models/RTNS2016_nowait/: RTNS2016_nowait.py
.raw_models/RTNS2017/: RTNS2017.py
.raw_models/RTNS2021/: RTNS2021.py
.raw_models/RTNS2022/: RTNS2022.py
.raw_models/SIGBED2019/: SIGBED2019.py
data/: data.ipynb  data_pipeline.bk  dataset_spec.py  generator.py  grid.ipynb  verificaiton.ipynb
data/input/: generate_data.ipynb
demo/demo1/: visual1.py  visual2.py  visual3.py
doc/: requirements.txt  rtss25.ipynb
doc/source/: benchmark.md  conf.py  dataprep.md  index.rst  quickstarted.md  schedule.md  simulation.md  testbed.md
scripts/: animate_tsn.py  animate_tsn_bk.py
simulation/: simulation.ipynb
simulation/CBS/: Untitled.ipynb
src/: killif_bk.sh  main.py  utils.py
tsnkit/: __init__.py
tsnkit/core/: _io.py  (+5 more)
(+786 files in other folders)
