[project]
name = "tsnkit"
version = "0.2.0"
authors = [
  { name="Chuanyu Xue", email="skewcy@gmail.com" },
]
description = "A simple scheduling toolkit for time-sensitive network in Python."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "z3-solver>=4.11.2",
    "docplex>=2.23.222",
    "gurobipy>=9.5.1",
    "networkx>=2.8.8",
    "numpy>=1.21.4",
    "pandas>=1.4.1",
    "psutil>=5.9.4",
    "scikit_learn>=1.3.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    'Development Status :: 3 - Alpha ',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',     
]

[project.urls]
"Homepage" = "https://github.com/ChuanyuXue/tsnkit"
"Bug Tracker" = "https://github.com/ChuanyuXue/tsnkit"

